system/ingress-controller/sample/apim-ingress.yaml
apiVersion: vick.wso2.com/v1alpha1
kind: Ingress
metadata:
  name: apim-ingress1
spec:
  name: TestApi1
  context: testapi
  version: "1.0"

  endpoints:
  -
    protocol: https
    type: production
    serviceName: employeesvc
    port: 443
  -
    protocol: http
    type: sandbox
    serviceName: employeesvc
    port: 80

  paths:
  -
    context: getTest
    operation: get
  -
    context: addTest
    operation: post
  -
    context: putTest
    operation: post
